[package]
authors     = ["lxl66566 <lxl66566@gmail.com>"]
categories  = ["multimedia::audio"]
description = "Easy to use audio loudness batch normalization tool using EBU R128 and RMS"
edition     = "2024"
keywords    = ["audio", "loudness", "normalization", "batch-processing", "multimedia"]
license     = "MIT"
name        = "audio-loudness-batch-normalize"
readme      = "README.md"
repository  = "https://github.com/lxl66566/audio-loudness-batch-normalize"
version     = "0.3.0"

[dependencies]
anyhow            = { version = "1.0", optional = true }
clap              = { version = "4.5", features = ["derive"], optional = true }
ebur128           = "0.1"
hound             = "3.5"
indicatif         = { version = "0.17", features = ["rayon"] }
log               = "0.4"
pathdiff          = "0.2"
pretty_env_logger = "0.5"
rand              = "0.9"
rayon             = "1.8"
strum_macros      = "0.27"
symphonia         = { version = "0.5", features = ["all-codecs", "all-formats"] }
thiserror         = "2.0"
vorbis_rs         = "0.5"
walkdir           = "2"

[features]
bin = ["clap", "anyhow"]

[[bin]]
name              = "loudness-normalize"
path              = "src/main.rs"
required-features = ["bin"]

[profile.release]
lto       = true
opt-level = "z"
panic     = "abort"
strip     = true
